--- a/FoHo/Base.lproj/Main.storyboard
+++ b/FoHo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Fzz-Yg-58E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Llu-1P-Hwp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -191,6 +191,82 @@
             </objects>
             <point key="canvasLocation" x="-3558" y="1145"/>
         </scene>
+        <!--Some Side Bar Thing-->
+        <scene sceneID="C9Q-24-gUE">
+            <objects>
+                <tableViewController id="aNu-XQ-hZS" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="RyK-UL-j80">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ebc-GC-5Rb">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ebc-GC-5Rb" id="o6r-Yc-dmI">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.13082351996648389" green="0.74575025202865519" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="aNu-XQ-hZS" id="Gfk-bw-6gh"/>
+                            <outlet property="delegate" destination="aNu-XQ-hZS" id="rTc-wj-r7p"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Some Side Bar Thing" id="Cku-sr-ZzE"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nzU-bZ-qi6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-6239" y="5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="S18-Na-dYl">
+            <objects>
+                <viewController id="Llu-1P-Hwp" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Hhz-aA-vbN"/>
+                        <viewControllerLayoutGuide type="bottom" id="WmB-kk-ehX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="i1B-UE-9aS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Ezm-Nf-PwU" appends="YES" id="KRF-56-YFf"/>
+                        </connections>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q7Q-EM-u35" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="Ezm-Nf-PwU">
+                    <connections>
+                        <segue destination="Nze-OH-HUp" kind="presentation" id="1sw-I3-KH2"/>
+                    </connections>
+                </swipeGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="-8132" y="49.925037481259373"/>
+        </scene>
+        <!--Side Menu Navigation Controller-->
+        <scene sceneID="Vfg-Vm-mzN">
+            <objects>
+                <navigationController id="Nze-OH-HUp" customClass="UISideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kaY-2D-5Oa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="leftSide" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <segue destination="aNu-XQ-hZS" kind="relationship" relationship="rootViewController" id="6HH-Np-L7M"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hW7-u9-ugF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7190" y="5"/>
+        </scene>
         <!--Home View Controller-->
         <scene sceneID="W88-ht-e1h">
             <objects>
@@ -215,7 +291,6 @@
         <!--Item-->
         <scene sceneID="UG4-y0-a8V">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yOB-CH-JRn" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="doL-vz-pLM" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YUU-dW-nmp"/>
@@ -228,6 +303,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="Xiy-B4-zNE"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yOB-CH-JRn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-4303" y="-372"/>
         </scene>
@@ -461,4 +537,5 @@
     <inferredMetricsTieBreakers>
         <segue reference="j6o-Sa-5wn"/>
     </inferredMetricsTieBreakers>
+    <color key="tintColor" red="0.86279246215594896" green="0.19591015981358961" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
